# AI-Bucket

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: PORTABLE.md  provider-quota-knowledgebase.md
scripts/: package-portable.ps1
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  lib.rs  main.rs  models.rs  store.rs
src-tauri/src/providers/: antigravity.rs  claude.rs  codex.rs  glm.rs  minimax.rs  mod.rs
src/components/: HistoryPanel.tsx  ProviderCard.tsx  ProviderIcon.tsx  SettingsPanel.tsx
src/lib/: format.ts  mock.ts  tauri.ts
